--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "socket.io": "^2.0.4",
     "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
