--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "babelify": "^8.0.0",
     "browser-sync": "^2.23.6",
     "browserify": "^16.1.1",
+    "browserify-css": "^0.14.0",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "glob": "^7.1.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-less": "^4.0.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^3.0.0",
     "mysql": "^2.15.0",
     "react": "^16.1.1",
