--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-saga": "^0.16.0",
     "socket.io": "^2.0.4",
     "vinyl-source-stream": "^2.0.0",
-    "zingtouch": "^1.0.5",
-    "redux-actions": "^2.2.1"
+    "zingtouch": "^1.0.5"
   },
   "scripts": {
     "start": "node server.js",
