--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "css-loader": "^0.28.11",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "glob": "^7.1.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-less": "^4.0.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^3.0.0",
+    "extract-loader": "2.0.1",
+    "file-loader": "1.1.11",
+    "less": "^3.0.1",
     "mysql": "^2.15.0",
+    "postcss-loader": "2.1.3",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
@@ -30,16 +27,24 @@
     "redux-actions": "^2.2.1",
     "redux-saga": "^0.16.0",
     "socket.io": "^2.0.4",
+    "style-loader": "0.20.3",
     "vinyl-source-stream": "^2.0.0",
+    "webpack": "4.5.0",
+    "webpack-cli": "2.0.14",
+    "webpack-dev-server": "3.1.1",
     "zingtouch": "^1.0.5"
   },
   "scripts": {
-    "start": "node server.js",
-    "build": "npm gulp",
+    "build": "webpack",
+    "start": "webpack-dev-server",
+    "server": "node server.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "express": "^4.16.2",
     "http": "0.0.0",
     "socket.io": "^2.0.4"
+  },
+  "devDependencies": {
+    "less-loader": "^4.1.0"
   }
 }
